<resources>
    <string name="app_name">Project App</string>



    <string name="settings_title">Student Settings</string>
    <string name="settings_menu">Settings</string>


    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_name_value</string>

    <string-array name="settings_order_by_labels">
        <item>@string/settings_order_by_age_label</item>
        <item>@string/settings_order_by_name_label</item>
        <item>@string/settings_order_by_gender_label</item>
    </string-array>


    <string-array name="settings_order_by_values">
        <item>@string/settings_order_by_age_value</item>
        <item>@string/settings_order_by_name_value</item>
        <item>@string/settings_order_by_gender_value</item>
    </string-array>

    <string name="settings_order_by_age_label">Age</string>
    <string name="settings_order_by_age_value" translatable="false">age</string>

    <string name="settings_order_by_name_label">Name</string>
    <string name="settings_order_by_name_value" translatable="false">name</string>



    <string name="settings_order_by_gender_label">Gender</string>
    <string name="settings_order_by_gender_value" translatable="false">gender</string>
    <string name="enter_student_id">Enter student Id</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_year_level">Enter Year Level</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="enter_section">Enter Section</string>
    <string name="enter_image_url">Enter Image Url</string>
    <string name="in_case_of_emergency_please_notify">In case of emergency Please Notify:</string>
    <string name="enter_parent_guardian_name">Enter Parent/Guardian Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_student_birthday">Enter Student Birthday</string>
    <string name="enter_address">Enter Address</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="absent">ABSENT</string>
    <string name="present">PRESENT</string>
    <string name="female">Female</string>
    <string name="male">Male</string>

</resources>
