<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/studentidicon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/studentnoedit"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:fontFamily="monospace"
                    android:hint="@string/enter_student_id"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/nameicon" />


                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/nameedit"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:fontFamily="monospace"
                    android:hint="@string/enter_name"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights"
                        android:src="@drawable/ageicon" />


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/yearlevelicon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    android:orientation="vertical">


                    <EditText
                        android:background="@drawable/shape"
                        android:id="@+id/ageSpinner"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="monospace"
                        android:hint="@string/enter_age"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:ignore="NestedWeights" />

                    <EditText
                        android:id="@+id/yearleveledittext"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:hint="@string/enter_year_level"
                        android:textAppearance="?android:attr/textAppearanceSmall" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights"
                        android:src="@drawable/gendericon" />


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/homeroomicon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radiogroupGender"
                        android:layout_width="match_parent"
                        android:background="@drawable/shape"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/female_radioBtn"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:fontFamily="monospace"
                            android:layout_height="match_parent"
                            android:textSize="12sp"
                            android:text="@string/female" />

                        <RadioButton
                            android:id="@+id/male_radioBtn"
                            android:fontFamily="monospace"
                            android:textSize="12sp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:text="@string/male" />

                    </RadioGroup>

                    <EditText
                        android:background="@drawable/shape"
                        android:id="@+id/homeroomedittext"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:hint="@string/enter_section"
                        android:textAppearance="?android:attr/textAppearanceSmall" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/imageurlicon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/imageurlviewedit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:fontFamily="monospace"
                    android:hint="@string/enter_image_url"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <TextView
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/in_case_of_emergency_please_notify"
                android:textStyle="bold"
                android:gravity="start"
                android:textColor="#696969"
                android:fontFamily="sans-serif-smallcaps"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/parenticon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/parentnameedittext"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:fontFamily="monospace"
                    android:hint="@string/enter_parent_guardian_name"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/contacticon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/contactnoedittext"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="21"
                    android:fontFamily="monospace"
                    android:hint="@string/enter_mobile_number"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


                <ImageView
                    android:layout_width="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/birthdayicon" />

                <TextView
                    android:background="@drawable/shape"
                    android:id="@+id/birthdayedittext"
                    android:layout_width="0dp"
                    android:layout_marginStart="4dp"
                    android:layout_height="match_parent"
                    android:layout_weight="21"
                    android:gravity="center"
                    android:fontFamily="monospace"
                    android:text="@string/enter_student_birthday"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/addressicon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/addressedittext"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:fontFamily="monospace"
                    android:hint="@string/enter_address"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <Button
                android:text="@string/save"
                android:id="@+id/submit"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_save"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_height="wrap_content" />


    </LinearLayout>
    </FrameLayout>
</RelativeLayout>

