<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudentActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/studentidicon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/studentnoeditupdate"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_student_id"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/nameicon" />


                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/nameeditupdate"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_name"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights"
                        android:src="@drawable/ageicon" />


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/yearlevelicon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    android:orientation="vertical">


                    <EditText
                        android:background="@drawable/shape"
                        android:id="@+id/ageedittextupdate"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:hint="@string/enter_age"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:ignore="NestedWeights" />

                    <EditText
                        android:background="@drawable/shape"
                        android:id="@+id/yearleveledittextupdate"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:layout_weight="1"
                        android:hint="@string/enter_year_level"
                        android:textAppearance="?android:attr/textAppearanceSmall" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights"
                        android:src="@drawable/gendericon" />


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/homeroomicon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    android:orientation="vertical">


                    <EditText
                        android:background="@drawable/shape"
                        android:id="@+id/genderedittextupdate"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        tools:ignore="NestedWeights"
                        android:fontFamily="sans-serif-smallcaps"
                        android:hint="@string/enter_gender"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:background="@drawable/shape"
                        android:id="@+id/homeroomedittextupdate"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-smallcaps"
                        android:hint="@string/enter_section"
                        android:textAppearance="?android:attr/textAppearanceSmall" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/imageurlicon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/imageurlvieweditupdate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_image_url"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <TextView
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/in_case_of_emergency_please_notify"
                android:textStyle="bold"
                android:gravity="start"
                android:fontFamily="sans-serif-smallcaps"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/parenticon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/parentnameedittextupdate"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_parent_guardian_name"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/contacticon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/contactnoedittextupdate"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="21"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_mobile_number"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


                <ImageView
                    android:layout_width="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/birthdayicon" />

                <TextView
                    android:background="@drawable/shape"
                    android:id="@+id/birthdayedittextupdate"
                    android:layout_width="0dp"
                    android:layout_marginStart="4dp"
                    android:layout_height="match_parent"
                    android:layout_weight="21"
                    android:gravity="center"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/enter_student_birthday"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/addressicon" />

                <EditText
                    android:background="@drawable/shape"
                    android:id="@+id/addressedittextupdate"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="7"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/enter_address"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <Button
                android:text="@string/update"
                android:id="@+id/submitupdate"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_save"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </FrameLayout>
</RelativeLayout>

